# Stripe-Slinger

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  Makefile  README.md  tree
.config/: nextest.toml
.gitlab/ci/: base.yml  lint.yml  no-code-gate.yml  quality.yml  release.yml  runtime-image.yml  test.yml
.gitlab/merge_request_templates/: default.md
ci/: base.yml  coverage.yml  e2e.yml  image.yml  lint.yml  test.yml
crates/raid-rs/: Cargo.toml
deploy/: docker-compose.yml
deploy/scripts/: init-sockets.sh  raid.sh
infra/: .env.example  .gitignore  config.alloy  docker-compose.yml
infra/scripts/: raid.sh
provisioning/terraform/: main.tf  (+4 more)
services/raid-simulator/crates/raid-cli/: Cargo.toml  README.md  build.rs
services/raid-simulator/crates/raid-cli/src/: cli.rs  main.rs  metrics_runtime.rs  mount.rs  pb.rs  sender.rs  simulator.rs  uds.rs
services/raid-simulator/crates/raid-cli/src/fs/: constants.rs  metadata.rs  mod.rs  persist.rs
services/raid-simulator/crates/raid-cli/src/fs/raidfs/: core.rs  filesystem.rs  mod.rs  ops_attr.rs  ops_create.rs  ops_dir.rs  ops_io.rs  ops_sync.rs  types.rs
services/raid-simulator/crates/raid-rs/: Cargo.toml  README.md
services/raid-simulator/crates/raid-rs/src/: lib.rs  metrics.rs
services/raid-simulator/crates/raid-rs/src/filesystem/: filesystem_tests.rs  mod.rs
services/raid-simulator/crates/raid-rs/src/layout/: mod.rs
services/raid-simulator/crates/raid-rs/src/layout/bits/: bits_tests.rs  mod.rs
services/raid-simulator/crates/raid-rs/src/layout/stripe/: mod.rs
services/raid-simulator/crates/raid-rs/src/layout/stripe/raid0/: mod.rs  raid0_tests.rs  stripe_impl.rs  stripe_trait_tests.rs
services/raid-simulator/crates/raid-rs/src/layout/stripe/raid1/: mod.rs  raid1_tests.rs  restore_impl.rs  restore_trait_tests.rs  stripe_impl.rs  stripe_trait_tests.rs
services/raid-simulator/crates/raid-rs/src/layout/stripe/raid3/: mod.rs  raid3_tests.rs  restore_impl.rs  restore_trait_tests.rs  stripe_impl.rs  stripe_trait_tests.rs
services/raid-simulator/crates/raid-rs/src/layout/stripe/traits/: mod.rs
services/raid-simulator/crates/raid-rs/src/layout/stripe/traits/restore/: mod.rs
services/raid-simulator/crates/raid-rs/src/layout/stripe/traits/stripe/: mod.rs  stripe_tests.rs
services/raid-simulator/crates/raid-rs/src/retention/: mod.rs
services/raid-simulator/crates/raid-rs/src/retention/array/: array_tests.rs  mod.rs
services/raid-simulator/crates/raid-rs/src/retention/disk/: disk_tests.rs  mod.rs
services/raid-simulator/crates/raid-rs/src/retention/volume/: mapper.rs  mapper_tests.rs  mod.rs  volume_tests.rs
services/raid-simulator/crates/raid-rs/src/volume_fs/: mod.rs
(+115 files in other folders)
