[package]
name = "raid-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line RAID simulator"
license = "MIT"
repository = "https://github.com/Stripe-Slinger/Stripe-Slinger"
readme = "README.md"
keywords = ["raid", "storage", "cli", "simulator"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
fuser = "0.16.0"
libc = "0.2.176"
raid-rs = { path = "../raid-rs" }
