[package]
name = "raid-rs"
version = "0.1.0"
edition = "2024"
description = "RAID layout algorithms and simulation helpers"
license = "MIT"
repository = "https://github.com/Stripe-Slinger/Stripe-Slinger"
readme = "README.md"
keywords = ["raid", "storage", "simulation", "algorithms"]
categories = ["algorithms", "data-structures"]

[dependencies]
anyhow = "1.0.100"
memmap2 = "0.9.9"
sha2 = "0.10.9"

[dev-dependencies]
tempfile = "3.23.0"
rand = "0.9.2"
