[package]
name = "raid-rs"
version = "0.1.0"
edition = "2024"
description = "Core RAID simulator library."
license = "MIT"
repository = "https://github.com/stripe-slinger/stripe-slinger"
keywords = ["raid", "storage", "simulator"]
categories = ["filesystem"]

[dependencies]
anyhow = "1.0.100"
memmap2 = "0.9.9"

[dev-dependencies]
tempfile = "3.23.0"
rand = "0.9.2"
